[package]
name = "intdate"
description = "Used to convert from an integer to a date, similar to Excel"
version = "0.1.0"
authors = ["Hunter Logan <hunter.gray.logan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
